Regression: Crash: Vertex Parent + SimpleDeform modifier with origin / Apply on Spline #97151

Closed
opened 2022-04-07 21:04:48 +02:00 by Georg K · 12 comments

System Information
Operating system: Linux-5.15.28-1-MANJARO-x86_64-with-glibc2.35 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.15.28-1-MANJARO, LLVM 13.0.1) AMD 4.5 (Core Profile) Mesa 21.3.7

Blender Version
Broken: 3.1.0 (crash when changing value), version: 3.2.0 Alpha, branch: master, commit date: 2022-04-04 15:54, hash: b5f3f8ef1d (crash on file open)
Worked: - before b9febb54a4

Short description of error
If an object is vertex-parented to a curve and the object is used a the origin for a Simple Deform modifier on the curve and the file is saved, blender crashes on opening the file.
The file will also crash while still open if Apply on Spline is activated and the angle of the Simple Deform modifier is changed.

terminal output:

Dependency cycle detected:
  OBCube/Transform Component/TRANSFORM_INIT() depends on
  OBBezierCurve/Geometry Component/GEOMETRY_EVAL() via 'Vertex Parent'
  OBCube/Transform Component/TRANSFORM_FINAL() via 'SimpleDeform Modifier'
  OBCube/Transform Component/TRANSFORM_SIMULATION_INIT() via 'Simulation -> Final Transform'
  OBCube/Transform Component/TRANSFORM_EVAL() via 'Transform Eval -> Simulation Init'
  OBCube/Transform Component/TRANSFORM_PARENT() via 'Eval'
  OBCube/Transform Component/TRANSFORM_LOCAL() via 'ObLocal -> ObParent'
  OBCube/Transform Component/TRANSFORM_INIT() via 'Transform Init'
Detected 1 dependency cycles
Writing: /home/georg/Blendertemp/Curve Vertex Parent Deform Crash - crash on opening.crash.txt
Segmentation fault (core dumped)

Exact steps for others to reproduce the error
(1)
In the attached file,

  • set the origin of the Simple Deform modifier to Cube
  • activate Apply on Spline for the Simple Deform modifier
  • try changing the angle of the Simple Deform modifier
  • crash (in 3.2.0 Alpha, 3.1.0, but not in 2.93.0)

(2)
In the attached file,

  • activate Apply on Spline for the Simple Deform modifier
  • set the origin of the Simple Deform modifier to Cube
  • crash (in 3.2.0 Alpha, 3.1.0, but not in 2.93.0)

(3)
In the attached file,

  • set the origin of the Simple Deform modifier to Cube
  • activate Apply on Spline for the Simple Deform modifier
  • save the file
  • try opening it
  • crash (in 3.2.0 Alpha, 3.1.0, 2.93.0, 2.91.2 and good old 2.79b)

Curve Vertex Parent Deform Crash - still opening.blend

Blender 3.1.0, Commit date: 2022-03-08 18:16, Hash c77597cd0e15

backtrace
blender(BLI_system_backtrace+0x33) [0x564c71b01c63]
blender(+0xf5020e) [0x564c6f32f20e]
/usr/lib/libc.so.6(+0x42560) [0x7f18bc95d560]
blender(+0xffc03f) [0x564c6f3db03f]
blender(BKE_object_get_parent_matrix+0x1d1) [0x564c6f3db5f1]
blender(BKE_object_eval_parent+0x71) [0x564c6f3f2b41]
blender(+0x154f4e1) [0x564c6f92e4e1]
blender(+0x154f532) [0x564c6f92e532]
blender(+0x372829a) [0x564c71b0729a]
/usr/lib/libtbb.so.12(+0x20abe) [0x7f18cf851abe]
/usr/lib/libtbb.so.12(+0x22d44) [0x7f18cf853d44]
/usr/lib/libc.so.6(+0x8d5c2) [0x7f18bc9a85c2]
/usr/lib/libc.so.6(clone+0x44) [0x7f18bca2d584]

**System Information** Operating system: Linux-5.15.28-1-MANJARO-x86_64-with-glibc2.35 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.15.28-1-MANJARO, LLVM 13.0.1) AMD 4.5 (Core Profile) Mesa 21.3.7 **Blender Version** Broken: 3.1.0 (crash when changing value), version: 3.2.0 Alpha, branch: master, commit date: 2022-04-04 15:54, hash: `b5f3f8ef1d` (crash on file open) Worked: - before b9febb54a4 **Short description of error** If an object is vertex-parented to a curve and the object is used a the origin for a Simple Deform modifier on the curve and the file is saved, blender crashes on opening the file. The file will also crash while still open if Apply on Spline is activated and the angle of the Simple Deform modifier is changed. terminal output: ``` Dependency cycle detected: OBCube/Transform Component/TRANSFORM_INIT() depends on OBBezierCurve/Geometry Component/GEOMETRY_EVAL() via 'Vertex Parent' OBCube/Transform Component/TRANSFORM_FINAL() via 'SimpleDeform Modifier' OBCube/Transform Component/TRANSFORM_SIMULATION_INIT() via 'Simulation -> Final Transform' OBCube/Transform Component/TRANSFORM_EVAL() via 'Transform Eval -> Simulation Init' OBCube/Transform Component/TRANSFORM_PARENT() via 'Eval' OBCube/Transform Component/TRANSFORM_LOCAL() via 'ObLocal -> ObParent' OBCube/Transform Component/TRANSFORM_INIT() via 'Transform Init' Detected 1 dependency cycles Writing: /home/georg/Blendertemp/Curve Vertex Parent Deform Crash - crash on opening.crash.txt Segmentation fault (core dumped) ``` **Exact steps for others to reproduce the error** (1) In the attached file, - set the origin of the Simple Deform modifier to Cube - activate Apply on Spline for the Simple Deform modifier - try changing the angle of the Simple Deform modifier - crash (in 3.2.0 Alpha, 3.1.0, but not in 2.93.0) (2) In the attached file, - activate Apply on Spline for the Simple Deform modifier - set the origin of the Simple Deform modifier to Cube - crash (in 3.2.0 Alpha, 3.1.0, but not in 2.93.0) (3) In the attached file, - set the origin of the Simple Deform modifier to Cube - activate Apply on Spline for the Simple Deform modifier - save the file - try opening it - crash (in 3.2.0 Alpha, 3.1.0, 2.93.0, 2.91.2 and good old 2.79b) [Curve Vertex Parent Deform Crash - still opening.blend](https://archive.blender.org/developer/F12981349/Curve_Vertex_Parent_Deform_Crash_-_still_opening.blend) ``` Blender 3.1.0, Commit date: 2022-03-08 18:16, Hash c77597cd0e15 backtrace blender(BLI_system_backtrace+0x33) [0x564c71b01c63] blender(+0xf5020e) [0x564c6f32f20e] /usr/lib/libc.so.6(+0x42560) [0x7f18bc95d560] blender(+0xffc03f) [0x564c6f3db03f] blender(BKE_object_get_parent_matrix+0x1d1) [0x564c6f3db5f1] blender(BKE_object_eval_parent+0x71) [0x564c6f3f2b41] blender(+0x154f4e1) [0x564c6f92e4e1] blender(+0x154f532) [0x564c6f92e532] blender(+0x372829a) [0x564c71b0729a] /usr/lib/libtbb.so.12(+0x20abe) [0x7f18cf851abe] /usr/lib/libtbb.so.12(+0x22d44) [0x7f18cf853d44] /usr/lib/libc.so.6(+0x8d5c2) [0x7f18bc9a85c2] /usr/lib/libc.so.6(clone+0x44) [0x7f18bca2d584] ```
Author

Added subscriber: @georgK

Added subscriber: @georgK
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm. checking...

Thanks for the report. I can confirm. checking...
Member
No description provided.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Looks like crash was introduced in b9febb54a4
@HooglyBoogly , can you check?

Looks like crash was introduced in b9febb54a4 @HooglyBoogly , can you check?
Author

While dragging the angle slider does not crash those older Blender versions, the file from case (3) crashes 2.93.0, 2.91.2 and good old 2.79b.
In these cases, the circular dependency leads to uncontrolled translation of the curve and cube if the angle slider is scrubbed quickly (probably to be expected).

While dragging the angle slider does not crash those older Blender versions, the file from case (3) crashes 2.93.0, 2.91.2 and good old 2.79b. In these cases, the circular dependency leads to uncontrolled translation of the curve and cube if the angle slider is scrubbed quickly (probably to be expected).
Member

Hi, then better we handle the third case in separate report. Can you do that?

Also, I was not sure about the third step (try opening it) so I did not test this in any version.
I'll check if you can clarify that step.

Hi, then better we handle the third case in separate report. Can you do that? Also, I was not sure about the third step (`try opening it`) so I did not test this in any version. I'll check if you can clarify that step.
Author

Oh sorry, seems like the 'save the blend file' step got lost in case (3) - I edited the first post.
Not sure if a separate report is needed since the older Blender versions won't get patched, but if you still think it makes sense, I'll open another report.

Oh sorry, seems like the 'save the blend file' step got lost in case (3) - I edited the first post. Not sure if a separate report is needed since the older Blender versions won't get patched, but if you still think it makes sense, I'll open another report.
Philipp Oeser changed title from Crash: Vertex Parent + SimpleDeform modifier with origin / Apply on Spline to Regression: Crash: Vertex Parent + SimpleDeform modifier with origin / Apply on Spline 2022-04-12 09:51:55 +02:00
Hans Goudey self-assigned this 2022-04-27 20:02:38 +02:00

This issue was referenced by 8095875dff

This issue was referenced by 8095875dffebed289791491ff15d68d49deb85ef
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97151
No description provided.